# kino

./: Cargo.toml  Dockerfile  LICENSE  README.md  justfile
.github/workflows/: check.yml  release.yml
crates/kino/: Cargo.toml  build.rs
crates/kino/src/: config.rs  http.rs  main.rs  probe.rs  proto.rs  recording.rs  scheduler.rs  state.rs
deploy/: kino.hcl  kino.service
docker/smoke/: kino-shell.sh  probes-entrypoint.sh  probes.Dockerfile  ssh-recording-entrypoint.sh  ssh-recording.Dockerfile  validate_casts.py
proto/kino/v1/: probes.proto
