[workspace]
members = ["crates/kino"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.93"
license = "UNLICENSED"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "warn"
unwrap_used = "warn"

[profile.release]
strip = true
